Fixed ability option error, so that options remain available until focus on selector is blurred

--- a/base/_typography.scss
+++ b/base/_typography.scss
@@ -45,3 +45,8 @@ button {
 .title__main--top {
   font-size: 2em;
 }
+
+.stats__title {
+  font-family: $font-secondary;
+  font-size: 1em;
+}
