--- a/layout/_layout.scss
+++ b/layout/_layout.scss
@@ -69,7 +69,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  row-gap: 5vh;
+  row-gap: 2vh;
   padding: 20px;
 }
 
